--- a/index.html
+++ b/index.html
@@ -6,5 +6,33 @@
     <title>Addis Pizza Restaurant</title>
     <link rel="stylesheet" href="style.csc" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href="#" class="logo">
+        <img src="img/logo.png" alt="Logo of addis restaurant company" />
+      </a>
+      <div class="bx bx-menu" id="menu-icon"></div>
+
+      <ul class="navbar">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#shop">Shop</a></li>
+        <li><a href="#delivery">Delivery</a></li>
+        <li><a href="#app">App</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </header>
+
+    <section class="home" id="home">
+      <div class="home-text">
+        <span>Welcome To</span>
+        <h1>Addis Restaurant</h1>
+        <h2>Free Coffee is a <br />tap away</h2>
+        <a href="#" class="btn">Join Now</a>
+      </div>
+      <div class="home-img">
+        <img src="img/home.png" alt="" />
+      </div>
+    </section>
+  </body>
 </html>
