--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.csc" />
   </head>
   <body>
+    <!--Header-->
+
     <header>
       <a href="#" class="logo">
         <img src="img/logo.png" alt="Logo of addis restaurant company" />
@@ -22,6 +24,8 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </header>
+
+    <!--Home Section-->
 
     <section class="home" id="home">
       <div class="home-text">
