Adding a title to the header section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <div class="home-text">
         <span>Welcome To</span>
         <h1>Addis Restaurant</h1>
-        <h2>Free Coffee is a <br />tap away</h2>
+        <h2>
+          Discover Authentic Flavors <br />
+          Addis Restaurant's Delectable Pizza Creations!
+        </h2>
         <a href="#" class="btn">Join Now</a>
       </div>
       <div class="home-img">
