Adding home section paragraph

--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Addis Pizza Restaurant</title>
-    <link rel="stylesheet" href="style.csc" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--Header-->
 
     <header>
-      <a href="#" class="logo">
-        <img src="img/logo.png" alt="Logo of addis restaurant company" />
-      </a>
+      <a href="#" class="logo"> <p>Addis Restaurant</p> </a>
       <div class="bx bx-menu" id="menu-icon"></div>
 
       <ul class="navbar">
@@ -38,7 +36,7 @@
         <a href="#" class="btn">Join Now</a>
       </div>
       <div class="home-img">
-        <img src="img/home.png" alt="" />
+        <img src="img/chefs.png" alt="Cefs image" />
       </div>
     </section>
   </body>
