adding shop part

--- a/index.html
+++ b/index.html
@@ -39,5 +39,59 @@
         <img src="img/chefs.png" alt="Cefs image" />
       </div>
     </section>
+
+    <section class="shop" id="shop">
+      <div class="heading">
+        <span>Shop Now</span>
+        <h1>Shop Coffee</h1>
+      </div>
+      <div class="shop-container">
+        <div class="box">
+          <div class="box-img">
+            <img src="img/shop1.png" alt="" />
+          </div>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <h2>Starbucks Coffee</h2>
+          <span>$ 12.4</span>
+          <a href="#" class="btn">Order Now</a>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="img/shop2.png" alt="" />
+          </div>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <h2>Starbucks Coffee</h2>
+          <span>$ 15.5</span>
+          <a href="#" class="btn">Order Now</a>
+        </div>
+        <div class="box">
+          <div class="box-img">
+            <img src="img/shop3.png" alt="" />
+          </div>
+          <div class="stars">
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star"></i>
+            <i class="bx bxs-star-half"></i>
+          </div>
+          <h2>Starbucks Coffee</h2>
+          <span>$ 14.4</span>
+          <a href="#" class="btn">Order Now</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
