--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
 
     <section class="home" id="home">
       <div class="home-text">
-        <span>Welcome To</span>
         <h1>Addis Restaurant</h1>
         <h2>
           Discover Authentic Flavors <br />
           Addis Restaurant's Delectable Pizza Creations!
         </h2>
-        <a href="#" class="btn">Join Now</a>
+        <a href="#" class="btn">Order Now</a>
       </div>
       <div class="home-img">
         <img src="img/chefs.png" alt="Cefs image" />
@@ -42,13 +41,13 @@
 
     <section class="shop" id="shop">
       <div class="heading">
-        <span>Shop Now</span>
-        <h1>Shop Coffee</h1>
+        <span>Secure Your Order</span>
+        <h1>Order Delicious Pizza</h1>
       </div>
       <div class="shop-container">
         <div class="box">
           <div class="box-img">
-            <img src="img/shop1.png" alt="" />
+            <img src="img/pizza4.jpg.crdownload" alt="" />
           </div>
           <div class="stars">
             <i class="bx bxs-star"></i>
@@ -63,7 +62,7 @@
         </div>
         <div class="box">
           <div class="box-img">
-            <img src="img/shop2.png" alt="" />
+            <img src="img/pizza2.avif" alt="" />
           </div>
           <div class="stars">
             <i class="bx bxs-star"></i>
@@ -78,7 +77,7 @@
         </div>
         <div class="box">
           <div class="box-img">
-            <img src="img/shop3.png" alt="" />
+            <img src="img/pizza3.jpg" alt="" />
           </div>
           <div class="stars">
             <i class="bx bxs-star"></i>
