Editing the name of pizza cards

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="shop-container">
         <div class="box">
           <div class="box-img">
-            <img src="img/pizza4.jpg.crdownload" alt="" />
+            <img src="img/pizza4.jpg" alt="" />
           </div>
           <div class="stars">
             <i class="bx bxs-star"></i>
@@ -56,7 +56,7 @@
             <i class="bx bxs-star"></i>
             <i class="bx bxs-star-half"></i>
           </div>
-          <h2>Starbucks Coffee</h2>
+          <h2>Mediterranean Magic</h2>
           <span>$ 12.4</span>
           <a href="#" class="btn">Order Now</a>
         </div>
@@ -71,7 +71,7 @@
             <i class="bx bxs-star"></i>
             <i class="bx bxs-star-half"></i>
           </div>
-          <h2>Starbucks Coffee</h2>
+          <h2>Pepperoni Paradise</h2>
           <span>$ 15.5</span>
           <a href="#" class="btn">Order Now</a>
         </div>
@@ -86,7 +86,7 @@
             <i class="bx bxs-star"></i>
             <i class="bx bxs-star-half"></i>
           </div>
-          <h2>Starbucks Coffee</h2>
+          <h2>Veggie Delight Extravaganza</h2>
           <span>$ 14.4</span>
           <a href="#" class="btn">Order Now</a>
         </div>
