adding contact us section

--- a/index.html
+++ b/index.html
@@ -49,13 +49,6 @@
           <div class="box-img">
             <img src="img/pizza4.jpg" alt="" />
           </div>
-          <div class="stars">
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star-half"></i>
-          </div>
           <h2>Mediterranean Magic</h2>
           <span>$ 12.4</span>
           <a href="#" class="btn">Order Now</a>
@@ -64,13 +57,7 @@
           <div class="box-img">
             <img src="img/pizza2.avif" alt="" />
           </div>
-          <div class="stars">
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star-half"></i>
-          </div>
+
           <h2>Pepperoni Paradise</h2>
           <span>$ 15.5</span>
           <a href="#" class="btn">Order Now</a>
@@ -79,18 +66,70 @@
           <div class="box-img">
             <img src="img/pizza3.jpg" alt="" />
           </div>
-          <div class="stars">
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star"></i>
-            <i class="bx bxs-star-half"></i>
-          </div>
           <h2>Veggie Delight Extravaganza</h2>
           <span>$ 14.4</span>
           <a href="#" class="btn">Order Now</a>
         </div>
       </div>
+    </section>
+
+    <section class="delivery" id="delivery">
+      <div class="heading">
+        <span>Grab Yours </span>
+        <h1>Order Via DoorDash</h1>
+      </div>
+      <div class="container">
+        <div class="delivery-text">
+          <h2>Deliver with Delight</h2>
+          <p>
+            Elevate your day with a touch of Addis Pizza's magic, conveniently
+            delivered by DoorDash. From the tantalizing aroma of freshly baked
+            pizzas to the irresistible flavors of cheesy toppings and savory
+            sauces, there's something to delight every pizza lover. Whether it's
+            a classic Margherita to savor during lunchtime or a spicy Pepperoni
+            Passion for a cozy dinner, Addis Pizza has you covered.
+          </p>
+          <p>
+            So, why wait? Order now and make your day a little brighter with
+            Starbucks via Uber Eats!
+          </p>
+          <div class="btn-order">
+            <a href="#" class="btn">Order Now</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="img/chefs.png" alt="" />
+      </div>
+      <div class="about-text">
+        <h2>
+          Discover Addis Pizza: A Legacy of Culinary Excellence and Community
+          Connection
+        </h2>
+        <p>
+          Embracing decades of culinary excellence, Addis Pizza has been a
+          cornerstone in our communities since its establishment. More than just
+          a pizzeria, we are a cultural hub, a place where people gather, and a
+          builder of global culinary connections. From our humble beginnings to
+          our iconic presence in cities worldwide, Addis Pizza has played a
+          pivotal role in redefining the pizza experience and fostering
+          meaningful connections among pizza lovers and communities alike.
+        </p>
+
+        <a href="#" class="btn">Learn More</a>
+      </div>
+    </section>
+
+    <section class="contact" id="contact">
+      <div class="links">
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms of Use</a>
+        <a href="#">Our Company</a>
+      </div>
+      <p>&#169; Addis Pizza Restaurant All Right Reserved.</p>
     </section>
   </body>
 </html>
