Adding humburger menu for small devices

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Addis Pizza Restaurant</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
   </head>
   <body>
     <!--Header-->
@@ -130,5 +134,6 @@
       </div>
       <p>&#169; Addis Pizza Restaurant All Right Reserved.</p>
     </section>
+    <script src="./script.js"></script>
   </body>
 </html>
